# time-tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  container.yml  desktop-release.yml  verify.yml
.scratch/time-tracker/: PRD.md  README.md
.scratch/time-tracker/issues/: 01-ci-and-local-quality-gate.md  02-auth-bff-org-membership-roles.md  03-client-project-activity-tag-management.md  04-manual-time-entry-recording.md  05-active-timer-lifecycle.md  06-time-entry-management.md  07-pwa-offline-sync-lww.md  08-unclassified-project-reassignment.md  09-time-entry-csv-import.md  10-reporting-dashboard-kpis.md  11-filters-search-export-bulk-ops.md  12-monthly-forecast.md  13-billing-preview-rates-expenses.md  14-notifications-reminders-alerts.md  15-freee-draft-invoice-integration.md  16-public-api-webhooks-tokens.md  18-desktop-native-tauri.md  (+13 more)
apps/api/: package.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/extension/: README.md  manifest.json  package.json  popup.css  popup.html  popup.js
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
deploy/: argocd-application.example.yaml
deploy/chart/: Chart.yaml  values.yaml
docs/: development.md  prd.md
docs/adr/: 0001-monorepo-core-first.md  0002-tdd-vertical-slices.md
docs/agents/: domain.md
(+25 files in other folders)
