[package]
name = "time-tracker-desktop"
version = "0.1.0"
description = "Time Tracker desktop application"
authors = ["Time Tracker contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "time_tracker_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
